# axc

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  apply-clang-format.sh  libaxc.pc.cmake  makefile
.github/workflows/: clang-format.yml  linux.yml  windows.yml
lib/libaxolotl-c/: CMakeLists.txt
lib/libaxolotl-c/src/curve25519/: CMakeLists.txt
lib/libaxolotl-c/src/protobuf-c/: CMakeLists.txt
src/: axc.c  axc.h  axc_crypto.c  axc_crypto.h  axc_store.c  axc_store.h  libaxc.pc  message_client.c
test/: test_client.c  test_store.c
